--- a/TP2Client/Views/FilmPage.xaml
+++ b/TP2Client/Views/FilmPage.xaml
@@ -9,6 +9,10 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
 
+
+    
+
+
     <RelativePanel>
         <TextBlock
             x:Name="tbTitre"
@@ -91,12 +95,35 @@
             RelativePanel.Below="tbChaine"
             Text="{Binding Serie.Network, Mode=TwoWay}" />
         <Button
-            Command="{Binding BtnSetConversion}"
             Width="100"
             Margin="6"
+            Command="{Binding BtnSetConversion}"
             RelativePanel.AlignHorizontalCenterWithPanel="True"
             RelativePanel.Below="txChaine">
             Ajouter
         </Button>
+
+
+
+        <NavigationView x:Name="NavigationView"
+                Loaded="NavigationView_Loaded"
+                SelectionChanged="NavigationView_SelectionChanged"
+                Header="WinUI 3 Navigation Sample"
+                IsBackButtonVisible="Collapsed"
+                IsSettingsVisible="False">
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="Home">
+
+                </NavigationViewItem>
+            </NavigationView.MenuItems>
+        </NavigationView>
+
+
+
+
     </RelativePanel>
+
+   
+
+
 </Page>
